--- a/Exercice2-Partie2-JS.html
+++ b/Exercice2-Partie2-JS.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,12 +6,7 @@
 </head>
 <body>
   <form>
-    <label for="nom">Votre nom  : </label><input type="text" name="nom" value="" id="nom" onblur="pertefocus();" />
+    <label for="nom">Votre nom  : </label><input type="text" name="nom" value="" id="nom" onblur="alert('Merci de votre participation');" />
   </form>
-  <script>
-  	function pertefocus(){
-  		alert('Merci de votre participation');
-  	}
-  </script>
 </body>
 </html>
